# Orie-5270-Final-Project

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: ASML_INTC_daily.csv  META_NVDA_daily.csv  sp500_AAPL_ORCL_stocks.xlsx  sp500_MSFT_AMD_stocks.xlsx
docs/: final_report.md  online_monitoring_report_draft.md  sampling_report_draft.md  schema.md  step1_report_draft.md
outputs/: clean_stock_data.csv  clean_stock_data.xlsx  full_history_baseline.csv  full_history_baseline.xlsx  monitoring_alerts.csv  monitoring_snapshots.csv  sampling_correctness_frequencies.csv  sampling_correctness_summary.csv  sampling_memory_comparison.csv  sampling_runtime_comparison.csv  sampling_sample_preview.json  stream_preview.json  topk_extreme_returns.csv  topk_vs_baseline_comparison.csv  validation_comparison_summary.csv  volatility_comparison.csv
scripts/: run_full_pipeline.py  run_monitoring.py  run_sampling_evaluation.py  run_step1_pipeline.py  run_validation_comparison.py
src/stock_stream/: __init__.py  baseline.py  data_loader.py  heap_sampler.py  monitoring.py  reservoir.py  sampling_evaluation.py  stream.py  topk.py  types.py
tests/: conftest.py  test_data_loader.py  test_monitoring.py  test_sampling.py  test_step1_pipeline.py  test_topk.py
